# ilamb3-data

./: .gitignore  README.md  pyproject.toml
.github/workflows/: validate.yaml
config/: deprecated.yaml  main.yaml  staging.yaml
data/AmeriFlux_FLUXNET/: convert.py
data/Ameriflux/: convert.py
data/CCI-CryoClim-FSC-1/: convert.py
data/CERES-EBAF-4-2-1/: convert.py
data/CERES-EBAF-TOA-4-2-1/: convert.py
data/CLASS-1-1/: convert.py
data/FLUXCOM-1/: convert.py
data/Fluxnet-2015/: convert.py
data/GEWEX-SRB-4-IP/: convert.py  global_attrs.yaml
data/GFED-5-0/: convert.py
data/HOFFMAN/: convert.py
data/HWSD-2-0/: convert.py
data/HWSD2/: convert.py
data/Hoffman/: convert.py
data/Hoffman-1-0/: convert.py  dora_convert.py
data/LORA/: convert.py
data/LORA-1-0/: convert.py
data/NOAA/: convert.py
data/RAPID/: convert.py
data/RAPID-2023-1a/: convert.py
data/Snow-cci/: convert.py
data/WECANN/: convert.py
data/WECANN-1-0/: convert.py
data/WOA/: convert.py
data/WOA-23/heat_content/: convert.py
data/WOA-23/statistical_climatologies/: convert.py
docs/: how-to-contribute-data.md
ilamb3_data/: __init__.py  biblatex_builder.py  cf_attr.py  global_attrs_model.py
registry/: data.txt
scripts/: validate_dataset.py  validate_patch.py
