[project]
name = "ilamb3-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.2.0",
    "netcdf4>=1.7.2",
    "pandas>=2.2.3",
    "pooch>=1.8.2",
    "pydantic>=2.10.6",
    "rioxarray==0.18.2",
    "xarray>=2025.1.2",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42", "setuptools-scm>=7"]

[tool.setuptools]
packages = ["ilamb3_data"]

[tool.setuptools_scm]
version_scheme = "no-guess-dev"
local_scheme = "node-and-date"
fallback_version = "0.0.0"
write_to = "ilamb3_data/_version.py"