[project]
name = "ilamb3-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.2.0",
    "netcdf4>=1.7.2",
    "pandas>=2.2.3",
    "pooch>=1.8.2",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "rioxarray==0.18.2",
    "xarray>=2025.1.2",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42"]

[tool.setuptools]
packages = ["ilamb3_data"]
