[project]
name = "ilamb3-data"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dask>=2025.2.0",
    "netcdf4>=1.7.2",
    "pandas>=2.2.3",
    "pooch>=1.8.2",
    "pydantic>=2.10.6",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
    "rioxarray==0.18.2",
    "xarray>=2025.1.2",
    "intake-esgf>=2024.12.7",
    "cf-xarray>=0.10.4",
    "cftime>=1.6.4.post1",
    "nc-time-axis>=1.4.1",
    "ilamb3>=2025.4.28",
    "cf-units>=3.3.0",
    "bs4>=0.0.2",
    "openpyxl>=3.1.5",
    "pyarrow>=23.0.0",
    "earthaccess>=0.16.0",
]

[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=42"]

[tool.setuptools]
packages = ["ilamb3_data"]
